Java Options added